--- a/templates/base.html
+++ b/templates/base.html
@@ -9,22 +9,33 @@
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
           integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+  <style>
+    /* make the logout button look like a link in the nav */
+    .linklike { background:none;border:none;padding:0;margin:0;cursor:pointer;color:inherit;font:inherit;text-decoration:underline; }
+    .logout-form { display:inline; }
+  </style>
 </head>
 <body>
   <header class="nav">
     <a class="brand" href="/meowls/">🐾 Meowl</a>
     <nav class="grow"></nav>
+
     {% if request.user.is_authenticated %}
       <span class="hello">Hi, {{ request.user.username }}</span>
       <a class="link" href="/meowls/create/">Create</a>
       <a class="link" href="/meowls/leaderboard/">Leaderboard</a>
-      <a class="link" href="/meowls/logout/">Logout</a>
+      <form class="logout-form" method="post" action="/accounts/logout/">
+        {% csrf_token %}
+        <button class="linklike" type="submit">Logout</button>
+      </form>
     {% else %}
       <a class="link" href="/meowls/leaderboard/">Leaderboard</a>
       <a class="btn" href="/accounts/login/">Log in</a>
       <a class="btn outline" href="{% url 'meowls:signup' %}">Sign up</a>
+    {% endif %}
+
     {% if user.is_staff %}
-     <a href="{% url 'meowls:staff_dashboard' %}">Staff</a>
+      <a class="link" href="{% url 'meowls:staff_dashboard' %}">Staff</a>
     {% endif %}
   </header>
 
